tests/ui/no_send-rc.stderr
error[E0277]: `Rc<{integer}>` cannot be sent between threads safely
  --> $DIR/no_send-rc.rs:7:9
   |
LL |     bar(x);
   |     --- ^ `Rc<{integer}>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `Rc<{integer}>`
note: required by a bound in `bar`
  --> $DIR/no_send-rc.rs:3:11
   |
LL | fn bar<T: Send>(_: T) {}
   |           ^^^^ required by this bound in `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
